--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# OAuth2.0 for Google settings
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
