--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,4 @@ build/
 /src/main/resources/templates/assets/vendor/simplebar/node_modules/
 
 # exclude application.properties
-*/application.properties
+application.properties
